--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,13 @@
 channels:
   - conda-forge
 dependencies:
+  - ase
   - atomap
   - scikit-learn
   - hyperspy-base
   - hyperspy-gui-ipywidgets
+  - nglview
   - particlespy
+  - pyprismatic
   - pyxem
 
